[package]
name = "spc-rs"
version = "0.3.1"
edition = "2024"

description = "A Rust Implementation of SPC (Statistical Process Control)"
authors = ["evanyang1120@163.com"]
homepage = "https://github.com/CrayfishGo/spc.git"
license = "MIT"
keywords = ["SPC", "Statistical", "math", "statistics"]
readme = "README.md"
documentation = "https://docs.rs/spc-rs/"

[dependencies]
num-traits = "0.2.14"
rust_decimal = "1.36"

[dependencies.approx]
version = "0.5.0"
